# nvmd-command

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  NOTICE  README.md  README.zh-CN.md
.github/: dependabot.yml  renovate.json
.github/workflows/: ci.yml  cross-check.yml  pre-release.yml  release.yml
crates/archive/: Cargo.toml
crates/archive/src/: lib.rs  tarball.rs  zip.rs
crates/fs-utils/: Cargo.toml
crates/fs-utils/src/: lib.rs
crates/progress-read/: Cargo.toml
crates/progress-read/src/: lib.rs
src/: Application.cpp  common.rs  main.rs  nvmd.h  nvmd.rs  signal.rs
src/cli/: current.rs  install.rs  list.rs  mod.rs  shim.rs  uninstall.rs  use.rs  which.rs
src/core/: binary.rs  corepack.rs  engine.rs  mod.rs  npm.rs  npx.rs  nvmd.rs
src/module/: context.rs  group.rs  home.rs  mod.rs  package.rs  project.rs  setting.rs
src/node/: fetch.rs  mod.rs
src/npm/: common.rs  install.rs  link.rs  mod.rs  uninstall.rs  unlink.rs
src/run/: binary.rs  corepack.rs  engine.rs  mod.rs  npm.rs  nvmd.rs
src/utils/: group.rs  help.rs  mod.rs  notice.rs  package.rs  progress.rs  project.rs  setting.rs
template/: temp.cmd
