[package]
name = "nvmd"
version = "4.0.9"
edition = "2021"
authors = ["The1111mp <The1111mp@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
archive = { path = "crates/archive" }
cfg-if = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap-cargo = { version = "0.16", default-features = false }
console = "0.16"
ctrlc = "3.4"
dirs = "5.0"
fs_extra = "1.3"
fs-utils = { path = "crates/fs-utils" }
indicatif = "0.18"
lazy_static = "1"
node-semver = "2"
once_cell = "1"
regex = "1.10"
retry = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
terminal_size = "0.4"
time = { version = "0.3", features = ["local-offset"] }
version-compare = "0.2"
