[package]
name = "nvmd"
version = "4.3.2"
edition = "2021"
authors = ["The1111mp <The1111mp@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
archive = { path = "crates/archive" }
attohttpc = { version = "0.30.1", features = ["json"] }
cfg-if = "1.0.4"
clap = { version = "4.6.1", features = ["derive"] }
clap-cargo = { version = "0.18.3", default-features = false }
console = "0.16.3"
ctrlc = "3.5.2"
dirs = "6.0.0"
envoy = "0.1.3"
fs_extra = "1.3"
fs-utils = { path = "crates/fs-utils" }
indicatif = "0.18.4"
node-semver = "2.2.0"
once_cell = "1.21.4"
regex = "1.12.3"
retry = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
terminal_size = "0.4.4"
time = { version = "0.3.47", features = ["local-offset"] }
version-compare = "0.2.1"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.78", features = ["vendored"] }
