[package]
name = "nvmd"
version = "4.3.3"
authors = ["The1111mp <The1111mp@outlook.com>"]
edition = "2024"
rust-version = "1.95"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.104"
archive = { path = "crates/archive" }
attohttpc = { version = "0.31.0", features = ["json"] }
cfg-if = "1.0.4"
clap = { version = "4.6.4", features = ["derive"] }
clap-cargo = { version = "0.18.3", default-features = false }
console = "0.16.4"
ctrlc = "3.5.2"
dirs = "6.0.0"
envoy = "0.1.3"
fs_extra = "1.3"
fs-utils = { path = "crates/fs-utils" }
indicatif = "0.18.6"
node-semver = "2.2.0"
once_cell = "1.21.4"
regex = "1.13.1"
retry = "2.2.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tempfile = "3.27.0"
terminal_size = "0.4.4"
time = { version = "0.3.54", features = ["local-offset"] }
version-compare = "0.2.1"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.81", features = ["vendored"] }
