[package]
name = "archive"
version = "0.1.0"
authors = ["The1111mp <The1111mp@outlook.com>"]
edition = "2021"

[dependencies]
attohttpc = { version = "0.30", features = [
  "compress",
  "tls-rustls-native-roots",
] }
cfg-if = "1"
flate2 = "1"
fs-utils = { path = "../fs-utils" }
headers = "0.4"
progress-read = { path = "../progress-read" }
tar = "0.4"
tee = "0.1"
thiserror = "2"
verbatim = "0.1"
zip = { version = "4", default-features = false, features = [
  "deflate",
  "bzip2",
] }
